fixed background image, added jump to page in nav

--- a/landing.css
+++ b/landing.css
@@ -51,6 +51,7 @@ header {
 	font-size: 2em;
 	background-repeat: no-repeat;
 	height: 20em;
+	background-attachment: fixed;
 }
 
 header h2 {
